--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.4.7",
     "axios": "^0.21.1",
     "next": "10.x",
     "next-themes": "0.0.15",
